Fix: adicionando arquivos js

--- a/Client/Views/Clientes/Create.cshtml
+++ b/Client/Views/Clientes/Create.cshtml
@@ -39,5 +39,6 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/js/create.js"></script>
 }
